# docs/swagger.json
@@ -254,31 +254,7 @@
                 }
             }
         },
-        "/emails": {
-            "post": {
-                "security": [
-                    {
-                        "JWTAuth": []
-                    }
-                ],
-                "consumes": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Emails"
-                ],
-                "summary": "Send account to All accounts",
-                "responses": {
-                    "200": {
-                        "description": "Emails sent successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/emails/{email}": {
+        "/emails/{emails}": {
             "post": {
                 "security": [
                     {
@@ -465,7 +441,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.LoginUser"
                         }
                     }
                 ],
@@ -522,7 +498,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.LoginUser"
                         }
                     }
                 ],
@@ -792,7 +768,7 @@
                 "created_at": {
                     "type": "string"
                 },
-                "email": {
+                "emails": {
                     "type": "string"
                 },
                 "id": {
@@ -807,13 +783,13 @@
             "type": "object",
             "required": [
                 "client",
-                "email"
+                "emails"
             ],
             "properties": {
                 "client": {
                     "type": "string"
                 },
-                "email": {
+                "emails": {
                     "type": "string"
                 }
             }
@@ -863,6 +839,21 @@
                 }
             }
         },
+        "models.LoginUser": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Transaction": {
             "type": "object",
             "properties": {
@@ -892,7 +883,7 @@
                 "client": {
                     "type": "string"
                 },
-                "email": {
+                "emails": {
                     "type": "string"
                 }
             }
@@ -923,27 +914,6 @@
             ],
             "properties": {
                 "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.User": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "username": {
                     "type": "string"
                 }
             }
