# pkg/models/email.go
@@ -1,0 +1,13 @@
+package models
+
+type Email struct {
+	Client  string
+	Email   string
+	Message string
+}
+
+type EmailTemplateData struct {
+	Username     string
+	Message      string
+	Transactions []Transaction
+}
