# pkg/models/user.go
@@ -3,8 +3,13 @@ package models
 import "time"
 
 type User struct {
-	Username  string    `json:"username" binding:"required" gorm:"type:integer;primaryKey;autoIncrement:true"`
-	Password  string    `json:"password" binding:"required"`
+	Username  string    `json:"username"  gorm:"type:integer;primaryKey;autoIncrement:true"`
+	Password  string    `json:"password"`
 	CreatedAt time.Time `json:"created_at" gorm:"autoCreateTime"`
 	UpdatedAt time.Time `json:"updated_at" gorm:"autoUpdateTime"`
+}
+
+type LoginUser struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
 }
